media query mobile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="col" id="baixo">
                 <h2 class="right-text">Abra as portas para <br> uma <span class="change">nova era</span> na gestão <br> da sua advocacia</h2>
                 <br><br>
-                <form style="min-width: 300px; float: right;">
+                <form class="formulario">
                     <div class="form-group">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                             placeholder="Digite seu melhor email">
