--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                     <a href="#" class="nav-link"><i class="fa fa-telegram"></i></a>
                 </li> -->
                 <li class="nav-item">
-                    <a href="#" class="nav-link"><i class="fa fa-envelope"><span class="email">
+                    <a href="mailto:contato@arkanjus.com.br" class="nav-link"><i class="fa fa-envelope"><span class="email" >
                                 &nbsp; contato@arkanjus.com.br</span></i></a>
+                                
                 </li>
             </ul>
         </div>
@@ -57,9 +58,10 @@
                 <br><br>
                 <form class="formulario">
                     <div class="form-group">
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" action="/" method="POST"
                             placeholder="Digite seu melhor email">
                         <small id="emailHelp" class="form-text text-muted">Entre na lista de espera do lançamento</small>
+
                     <button type="submit" class="btn btn-color" style="min-width: 300px;">Entrar na lista</button>
                 </form>
                 </div>
@@ -74,6 +76,7 @@
             </div>
         </div> -->
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
