--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -28,7 +27,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarMenu">
             <ul class="navbar-nav ml-auto">
-<!--                 <li class="nav-item">
+<!--                 <li class="nav-item">         OUTROS ÍCONES DE CONTATO/REDES SOCIAIS
                     <a href="#" class="nav-link"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li class="nav-item">
