api monkeysheet done

--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
                 <br><br>
                 <form class="formulario">
                     <div class="form-group">
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" action="/" method="POST"
+                        <input name="name" type="text" class="form-control" id="nome-imput" aria-describedby=" " action="/" method="POST"
+                            placeholder="Nome do seu escritório">
+                        <input name="number" type="number" class="form-control" id="number-input" aria-describedby=" " action="/" method="POST"
+                            placeholder="Número de colaboradores">
+                        <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" action="/" method="POST"
                             placeholder="Digite seu melhor email">
                         <small id="emailHelp" class="form-text text-muted">Entre na lista de espera do lançamento</small>
 
-                    <button type="submit" class="btn btn-color" style="min-width: 300px;">Entrar na lista</button>
+                    <button name="submit-btn" type="submit" class="btn btn-color" style="min-width: 300px;">Entrar na lista</button>
                 </form>
                 </div>
 
@@ -86,6 +90,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
