works but redirects

--- a/index.html
+++ b/index.html
@@ -55,16 +55,15 @@
             <div class="col" id="baixo">
                 <h2 class="right-text">Abra as portas para <br> uma <span class="change">nova era</span> na gestão <br> da sua advocacia</h2>
                 <br><br>
-                <form class="formulario">
+                <form class="formulario" method="post" action="https://script.google.com/macros/s/AKfycbwAIomMt2rug7YywvPSeeckRgfnut9eEGKv-qNH0lvDV1PdQ4lrpvfz3U0AtH2rfEIQig/exec" name="contact-form">
                     <div class="form-group">
-                        <input name="name" type="text" class="form-control" id="nome-imput" aria-describedby=" " action="/" method="POST"
+                        <input name="name" type="text" class="form-control" id="nome-imput" aria-describedby=" " 
                             placeholder="Nome do seu escritório">
-                        <input name="number" type="number" class="form-control" id="number-input" aria-describedby=" " action="/" method="POST"
+                        <input name="number" type="number" class="form-control" id="number-input" aria-describedby=" "
                             placeholder="Número de colaboradores">
-                        <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" action="/" method="POST"
+                        <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" 
                             placeholder="Digite seu melhor email">
                         <small id="emailHelp" class="form-text text-muted">Entre na lista de espera do lançamento</small>
-
                     <button name="submit-btn" type="submit" class="btn btn-color" style="min-width: 300px;">Entrar na lista</button>
                 </form>
                 </div>
